k8s/chatalk/entrypoint/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrypoint
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: entrypoint
        image: registry.chatalk.fr/entrypoint:master
