k8s/chatalk/entrypoint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
spec:
  ports:
    - name: entrypoint-port
      protocol: TCP
      port: 42042
      targetPort: 42042
