k8s/chatalk/entrypoint/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: entrypoint
spec:
  tls:
  - hosts:
    - ws.chatalk.fr
    secretName: chatalk-cert
  rules:
  - host: ws.chatalk.fr
    http:
      paths:
      - backend:
          serviceName: entrypoint
          servicePort: 42042
